# GLSLTest

./: .gitignore  CMakeLists.txt  meson.build
cmake/: FindSDL2.cmake
doc/: Doxyfile.in
src/: gl.c  gl.h  glsltest.c  io.c  io.h  parse_input.c  parse_input.h  sdl.c  sdl.h  shader.c  shader.h
